[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "torch (>=2.6.0,<3.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "numpy (>=2.2.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pgvector (>=0.4.1,<0.5.0)",
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
